# airbus-harvester

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions.yaml
airbus_harvester/: __main__.py  airbus_harvester_messager.py  airbus_phr_data.json  airbus_pneo_data.json  airbus_sar_data.json  airbus_spot_data.json  config.json  config_schema.json
tests/: test_airbus_harvester_messager.py  test_package.py
