[project]
name = "airbus-harvester"
version = "0.1.4"
description = "Harvest Airbus data"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com"}
]
maintainers = [
  {name = "Telespazio UK Ltd", email = "hannah.collingwood@telespazio.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "boto3>=1.42.44",
    "botocore>=1.42.44",
    "click>=8.3.1",
    "eodhp-utils",
    "inflection>=0.5.1",
    "pulsar-client>=3.10.0",
    "pystac>=1.14.3",
    "pystac-client>=0.9.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "moto>=5.1.20",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.6.3",
    "pytest-xdist>=3.8.0",
    "requests-mock>=1.12.1",
    "ruff>=0.15.0",
    "validate-pyproject>=0.25",
]

[project.urls]
homepage = "https://github.com/EO-DataHub/"
repository = "https://github.com/EO-DataHub/airbus-harvester"
changelog = "https://github.com/EO-DataHub/airbus-harvester/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airbus_harvester"]

[tool.uv]
package = true

[tool.uv.sources]
eodhp-utils = { git = "https://github.com/EO-DataHub/eodhp-utils.git", tag = "v0.1.13" }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
markers = [
  "integrationtest: Integration test"
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",    # Pycodestyle errors
    "W",    # Pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "FAST", # FastAPI
    "RUF",  # RUF-specific rules
    "SIM",  # Simplifications
    "B",    # Bugbear
    "ANN",  # Annotations
    "PLC",  # Pylint convention
    "PLE",  # Pylint errors
    "UP",   # pyupgrade
    "FURB", # refurb
    "PT",   # pytest
]
ignore = [
    "E501",   # line too long
    "SIM108", # ternary operator
    "SIM103", # return bool directly
    "B008",   # function call in default argument (incompatible with FastAPI)
    "ANN401", # dynamically typed expressions (Any) are disallowed
]
